fixing color contrast

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -78,6 +78,10 @@
 		--color-heading: var(--vt-c-text-dark-1);
 		--color-text: var(--vt-c-text-dark-2);
 	}
+
+	h1, h2 {
+		color: #fff
+	}
 }
 
 *,
